--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
     <p class="note">Fields marked with * are required.</p>
       <form>
         <label for="name">Name: *</label>
-        <input type="text" id="name" name="name" >
+        <input type="text" id="name" name="name" pattern="[a-zA-Z]+" required="true">
         <br>
 
         <label for="name">Phone Number: *</label>
-        <input type="text" id="phone" name="phone" maxlength="11">
+        <input type="text" id="phone" name="phone" minlength="10" maxlength="10" pattern="\d+" required="true">
         <br>
 
-        <label for="name">Social Security #: *</label>
-        <input type="text" id="social" name="social" pattern="" minlength="10"  maxlength="10" >
-        <br>
-
-        <label for="name">Company Email Address: *</label>
-        <input type="email" id="email" name="email"  >
+        <label for="name">Company Email Address:</label>
+        <input type="email" id="email" name="email" >
         <br>
 
         <label for="name">Age: </label>
@@ -31,7 +27,7 @@
         <br>
 
         <label for="name">ZipCode: * </label>
-        <input type="number" id="zip" name="zip" maxlength="9" >
+        <input type="text" id="zip" name="zip" minlength="5" maxlength="9" pattern="\d+" required="true" >
         <br>
         
         <input type="submit" value="Submit" />
